fixed video width on small devices

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -150,6 +150,7 @@
 .video-center {
   display: block;
   margin: 0 auto;
+  max-width: 100%;
 }
 
 .text {
